Making menu better on mobile, scrolling issues

--- a/_assets/scss/imports/_general.scss
+++ b/_assets/scss/imports/_general.scss
@@ -46,8 +46,5 @@ hr{
 }
 
 @media screen and(min-width: $tablet){
-  .scroll-x, .highlight{
-    width: 150%;
-    margin-left: -25%;
-  }
+
 }
