--- a/_assets/scss/main.scss
+++ b/_assets/scss/main.scss
@@ -56,7 +56,7 @@
   &__details{
     position: absolute;
     bottom: 0;
-    padding: 15px;
+    padding: 15px 0;
   }
 }
 
